--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
                         <img class="img_block" src="img/git.jpg" alt="Git + GitHub">
                         <p class="tit_block_text">Навчальні матеріали <br> Git + Github</p>
                         <div class="hidden_block_git">
-                            <a class="git_link" href="https://boris2606.github.io/git-course/build/index.html">Робота з Git</a>
+                            <a class="git_link" href="https://boris2606.github.io/git-course/build/index.html" target="_blank">Робота з Git</a>
                         </div>
                     </article>
                     <article class="js_block">
                         <img class="img_block" src="img/js.jpg" alt="JavaScript">
                         <p class="tit_block_text">Навчальні матеріали <br> JavaScript</p>
                         <div class="hidden_block_js">
-                            <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/">Основи JavaScript</a>
-                            <a class="js_link" href="https://boris2606.github.io/learning-chrome-devtools/public/">Дебаг DevTools</a>
+                            <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/" target="_blank">Основи JavaScript</a>
+                            <a class="js_link" href="https://boris2606.github.io/learning-chrome-devtools/public/" target="_blank">Дебаг DevTools</a>
                             <a class="js_link" href="#">JavaScript ES6</a>
                         </div>
                     </article>
