--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
                             <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/" target="_blank">Основи JavaScript</a>
                             <a class="js_link" href="https://boris2606.github.io/learning-chrome-devtools/public/" target="_blank">Дебаг DevTools</a>
                             <a class="js_link" href="#">JavaScript ES6</a>
+                            <a class="js_link" href="#">Prototype JS</a>
                         </div>
                     </article>
                     <article class="react_block">
