Added buttons of video

--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,42 @@
                         <img class="img_block" src="img/git.jpg" alt="Git + GitHub">
                         <p class="tit_block_text">Навчальні матеріали <br> Git + Github</p>
                         <div class="hidden_block_git">
-                            <a class="git_link" href="https://boris2606.github.io/git-course/build/index.html" target="_blank">Робота з Git</a>
+                            <div class="wrapper_hidden_block">
+                                <a href="https://www.youtube.com/watch?v=zZBiln_2FhM&list=PLqKQF2ojwm3lrzkYrqnxh6qywB99dCyCt&index=4" target="_blank" class="bg_img_video btn_git"></a>
+                                <a class="git_link" href="https://boris2606.github.io/git-course/build/index.html" target="_blank">Робота з Git</a>
+                            </div>
                         </div>
                     </article>
                     <article class="js_block">
                         <img class="img_block" src="img/js.jpg" alt="JavaScript">
                         <p class="tit_block_text">Навчальні матеріали <br> JavaScript</p>
                         <div class="hidden_block_js">
-                            <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/" target="_blank">Основи JavaScript</a>
-                            <a class="js_link" href="https://boris2606.github.io/learning-chrome-devtools/public/" target="_blank">Дебаг DevTools</a>
-                            <a class="js_link" href="#">JavaScript ES6+</a>
-                            <a class="js_link" href="#">Prototype JS</a>
+                            <div class="wrapper_hidden_block">
+                                <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&list=PLqKQF2ojwm3llpxoP1rzoz7TE2Fpo4Zhp&index=11" target="_blank" class="bg_img_video btn_js"></a>
+                                <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/" target="_blank">Основи JavaScript</a>
+                            </div>
+                            <div class="wrapper_hidden_block">
+                                <a href="https://www.youtube.com/watch?v=20UsCQzUOIE&list=PLqKQF2ojwm3llpxoP1rzoz7TE2Fpo4Zhp&index=5" target="_blank" class="bg_img_video btn_js"></a>
+                                <a class="js_link" href="https://boris2606.github.io/learning-chrome-devtools/public/" target="_blank">Дебаг DevTools</a>
+                            </div>
+                            <div class="wrapper_hidden_block">
+                                <a href="https://www.youtube.com/watch?v=Ti2Q4sQkNdU&list=PLqKQF2ojwm3llpxoP1rzoz7TE2Fpo4Zhp" target="_blank" class="bg_img_video btn_js"></a>
+                                <a class="js_link" href="https://boris2606.github.io/learning-javascript-es6/public/" target="_blank">JavaScript ES6+</a>
+                            </div>
+                            <div class="wrapper_hidden_block">
+                                <a href="https://www.youtube.com/watch?v=aQkgUUmUJy4&list=PLqKQF2ojwm3l4oPjsB9chrJmlhZ-zOzWT" target="_blank" class="bg_img_video btn_js"></a>
+                                <a class="js_link" href="#">Prototype JS</a>
+                            </div>
                         </div>
                     </article>
                     <article class="react_block">
                         <img class="img_block" src="img/React.png" alt="React.js">
                         <p class="tit_block_text">Навчальні матеріали <br> React.js</p>
                         <div class="hidden_block_react">
-                            <a class="react_link" href="#">Перейти</a>
+                            <div class="wrapper_hidden_block">
+                                <a href="https://www.youtube.com/watch?v=GNrdg3PzpJQ&list=PL6DxKON1uLOHya4bDIynPTCwZHrezUlFs" target="_blank" class="bg_img_video btn_react"></a>
+                                <a class="react_link" href="#">React JS</a>
+                            </div>
                         </div>
                     </article>
                 </div>
