Change file and public project

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
                     </article>
                     <article class="js_block">
                         <img class="img_block" src="img/js.jpg" alt="JavaScript">
-                        <p class="tit_block_text">Навчальні матеріали <br> JavaScript</p>
+                        <p class="tit_block_text">Навчальні матеріали <br> JavaScript (JS)</p>
                         <div class="hidden_block_js">
                             <div class="wrapper_hidden_block">
                                 <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&list=PLqKQF2ojwm3llpxoP1rzoz7TE2Fpo4Zhp&index=11" target="_blank" class="bg_img_video btn_js"></a>
-                                <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/" target="_blank">Основи JavaScript</a>
+                                <a class="js_link" href="https://boris2606.github.io/learning-javascript/public/" target="_blank">Основи JS</a>
                             </div>
                             <div class="wrapper_hidden_block">
                                 <a href="https://www.youtube.com/watch?v=20UsCQzUOIE&list=PLqKQF2ojwm3llpxoP1rzoz7TE2Fpo4Zhp&index=5" target="_blank" class="bg_img_video btn_js"></a>
@@ -35,11 +35,11 @@
                             </div>
                             <div class="wrapper_hidden_block">
                                 <a href="https://www.youtube.com/watch?v=Ti2Q4sQkNdU&list=PLqKQF2ojwm3llpxoP1rzoz7TE2Fpo4Zhp" target="_blank" class="bg_img_video btn_js"></a>
-                                <a class="js_link" href="https://boris2606.github.io/learning-javascript-es6/public/" target="_blank">JavaScript ES6+</a>
+                                <a class="js_link" href="https://boris2606.github.io/learning-javascript-es6/public/" target="_blank">JS ES6+</a>
                             </div>
                             <div class="wrapper_hidden_block">
                                 <a href="https://www.youtube.com/watch?v=aQkgUUmUJy4&list=PLqKQF2ojwm3l4oPjsB9chrJmlhZ-zOzWT" target="_blank" class="bg_img_video btn_js"></a>
-                                <a class="js_link" href="#">Prototype JS</a>
+                                <a class="js_link" href="https://boris2606.github.io/learning-pro-js/public/" target="_blank">Поглиблений JS</a>
                             </div>
                         </div>
                     </article>
