Change link GIT cource

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                         <div class="hidden_block_git">
                             <div class="wrapper_hidden_block">
                                 <a href="https://www.youtube.com/watch?v=zZBiln_2FhM&list=PLqKQF2ojwm3lrzkYrqnxh6qywB99dCyCt&index=4" target="_blank" class="bg_img_video btn_git"></a>
-                                <a class="git_link" href="https://boris2606.github.io/git-course/build/index.html" target="_blank">Робота з Git</a>
+                                <a class="git_link" href="https://boris2606.github.io/git-course/public/" target="_blank">Робота з Git</a>
                             </div>
                         </div>
                     </article>
